cabal-version: 2.4
name: tapioca
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
maintainer: cfraz89@gmail.com
author: Christopher Fraser
synopsis: A tasty enhancement to cassava for easy csv exporting
category: Data
extra-source-files:
    CHANGELOG.md

library
    exposed-modules:
        Data.Tapioca
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base >=4.10.0,
        cassava -any,
        bytestring -any,
        vector -any,
        unordered-containers -any,
        binary -any
