cabal-version: 2.4
name: tapioca
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
maintainer: cfraz89@gmail.com
author: Christopher Fraser
synopsis: A tasty enhancement to cassava for easy csv exporting
description: tapioca is a package that builds on cassava, to provide a simpler, more succinct method of mapping records to and from csv data.
category: Text, Web, CSV
extra-source-files:
    examples/Examples.hs
    CHANGELOG.md
    README.md

source-repository head
  type: git
  location: https://github.com/cfraz89/tapioca.git

library
    exposed-modules: Data.Tapioca
    other-modules: Data.Tapioca.Internal.Common,
                   Data.Tapioca.Internal.Types.Codec,
                   Data.Tapioca.Internal.Types.ColSep,
                   Data.Tapioca.Internal.Types.CsvMap,
                   Data.Tapioca.Internal.Types.GParseRecord,
                   Data.Tapioca.Internal.Types.HFoldable,
                   Data.Tapioca.Internal.Types.Index,
                   Data.Tapioca.Internal.Types.Match,
                   Data.Tapioca.Internal.Types.ParseRecord,
                   Data.Tapioca.Internal.Types.ParseWithCsvMap,
                   Data.Tapioca.Internal.ByCsvMap
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall -fprint-potential-instances
    build-depends:
        base >=4.10.0 && < 1000,
        attoparsec           >= 0.13.2 && < 0.14,
        bytestring           >= 0.10.8 && < 0.11,
        binary               >= 0.8.6 && < 0.9,
        cassava              >= 0.5.1 && < 0.6,
        unordered-containers >= 0.2.9 && < 0.3,
        vector               >= 0.12.0 && < 0.13,
        errors               >= 2.3.0 && < 2.4,
        invertible           >= 0.2.0 && < 0.3,