cabal-version: 2.4
name: tapioca-examples
version: 0.1.0.0
maintainer: cfraz89@gmail.com
author: Christopher Fraser
category: Example
build-type: Simple

executable examples
    main-is: Examples.hs
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        base,
        tapioca,
        bytestring,
        vector
