cabal-version: 2.4
name: tapioca-examples
version: 0.2.0.0
maintainer: cfraz89@gmail.com
author: Christopher Fraser
category: Example
build-type: Simple

common example
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        base,
        tapioca,
        bytestring,
        vector,
        cassava,
        pretty-simple

executable basic_decode
    import: example
    main-is: BasicDecode.hs
    ghc-options: -main-is Data.Tapioca.Examples.BasicDecode

executable basic_decode_no_header
    import: example
    main-is: BasicDecodeNoHeader.hs
    ghc-options: -main-is Data.Tapioca.Examples.BasicDecodeNoHeader

executable basic_encode
    import: example
    main-is: BasicEncode.hs
    ghc-options: -main-is Data.Tapioca.Examples.BasicEncode

executable encode_only
    import: example
    main-is: EncodeOnly.hs
    ghc-options: -main-is Data.Tapioca.Examples.EncodeOnly

executable codec_field
    import: example
    main-is: CodecField.hs
    ghc-options: -main-is Data.Tapioca.Examples.CodecField

executable nested_decode
    import: example
    main-is: NestedDecode.hs
    ghc-options: -main-is Data.Tapioca.Examples.NestedDecode

executable nested_encode
    import: example
    main-is: NestedEncode.hs
    ghc-options: -main-is Data.Tapioca.Examples.NestedEncode

executable newtype
    import: example
    main-is: Newtype.hs
    ghc-options: -main-is Data.Tapioca.Examples.Newtype

executable cassava_compat
    import: example
    main-is: CassavaCompat.hs
    ghc-options: -main-is Data.Tapioca.Examples.CassavaCompat